log
sá., 19 de mar. de 2022 16:28:47: 
 tests:  0|6
total_score: 0/70
1893bd1
sá., 19 de mar. de 2022 16:32:03: 
 list.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
0bca006
sá., 19 de mar. de 2022 16:33:10: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: conflicting types for 'dato'
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:10: note: previous declaration of 'dato' was here
     List dato;
          ^~~~
Compilation failed
9fb0188
sá., 19 de mar. de 2022 16:33:24: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: redeclaration of 'dato' with no linkage
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:11: note: previous declaration of 'dato' was here
     List *dato;
           ^~~~
Compilation failed
bec436b
sá., 19 de mar. de 2022 16:33:38: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
fa32755
sá., 19 de mar. de 2022 16:34:36: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:24: error: too few arguments to function 'calloc'
   List* dato = (List*) calloc (sizeof(List));
                        ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
c4f37bc
sá., 19 de mar. de 2022 16:35:57: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:32: error: expected expression before 'List'
   List* dato = (List*) calloc (List*sizeof(List));
                                ^~~~
list.c:33:24: error: too few arguments to function 'calloc'
   List* dato = (List*) calloc (List*sizeof(List));
                        ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
bc58698
